crates/sotf-plugins/tests/snapshots/render_plan_snapshots__limiter__limiter__ipad_portrait.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "limiter",
  "width": 768.0,
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "row",
  "slider_height": 120.0,
  "show_visualizations": false,
  "columns_visible": [
    "config",
    "main",
    "output"
  ],
  "columns_collapsed": [],
  "config_controls": [
    {
      "param_index": 3,
      "param_name": "Soft Knee",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    },
    {
      "param_index": 4,
      "param_name": "True Peak",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    },
    {
      "param_index": 5,
      "param_name": "ISP Limit",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    },
    {
      "param_index": 6,
      "param_name": "Dual Release",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    }
  ],
  "main_groups": [
    {
      "title": "DYNAMICS",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Threshold",
          "control_type": "vertical_slider",
          "unit": "dB",
          "range": [
            -20.0,
            0.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "title": "TIMING",
      "controls": [
        {
          "param_index": 1,
          "param_name": "Release",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            10.0,
            1000.0
          ],
          "read_only": false
        },
        {
          "param_index": 2,
          "param_name": "Lookahead",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            0.0,
            20.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [
    {
      "param_index": 18446744073709551615,
      "param_name": "(meter)",
      "control_type": "bar_meter(-20..0)",
      "unit": "",
      "range": null,
      "read_only": true
    },
    {
      "param_index": 7,
      "param_name": "Mix",
      "control_type": "knob",
      "unit": "%",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    }
  ],
  "tabs": [],
  "viz_slots": [
    {
      "viz_type": "transfer_curve",
      "position": "below:DYNAMICS"
    }
  ],
  "dynamic_sections": []
}
